[project]
name = "v1-liquidity-monitor"
version = "0.1.0"
description = "Bot to monitor pool liquidity for Marginal v1"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "eth-ape==0.8.15",
    "silverback==0.5.8",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=7.1.1",
]
